<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jetbrains.teamcity.plugins</groupId>
  <version>${revision}</version>
  <artifactId>shared-resources</artifactId>
  <packaging>pom</packaging>

  <properties>
    <revision>${PluginVersion}</revision>
    <PluginVersion>${BUILD_NUMBER}</PluginVersion>
    <BUILD_NUMBER>SNAPSHOT</BUILD_NUMBER>
    <teamcity.version>${MAJOR_VERSION}-${BUILD_NUMBER}</teamcity.version>
    <MAJOR_VERSION>2026.1</MAJOR_VERSION>
    <local.repo.path>${TC_LOCAL_REPO}</local.repo.path>
    <TC_LOCAL_REPO>local-repo</TC_LOCAL_REPO>
  </properties>

  <modules>
    <module>shared-resources-server</module>
    <module>shared-resources-webapp</module>
    <module>shared-resources-test</module>
  </modules>

  <url>https://github.com/JetBrains/teamcity-shared-resources</url>

  <organization>
    <name>JetBrains</name>
    <url>https://www.jetbrains.com</url>
  </organization>


  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jetbrains.teamcity.plugins</groupId>
        <artifactId>shared-resources-server</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.teamcity</groupId>
        <artifactId>bom</artifactId>
        <version>${teamcity.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>local-teamcity-artifacts</id>
      <url>file://${local.repo.path}</url>
      <snapshots>
        <checksumPolicy>ignore</checksumPolicy>
        <updatePolicy>never</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>teamcity-space</id>
      <url>https://packages.jetbrains.team/maven/p/tc/maven</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>8</source>
          <target>8</target>
<!--          <release>8</release>-->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <inherited>false</inherited>
        <version>2.4.0</version>
        <configuration>
          <thirdPartyFilename>third-party-libraries.json</thirdPartyFilename>
          <fileTemplate>${maven.multiModuleProjectDirectory}/license-third-party.ftl</fileTemplate>
          <force>true</force>
          <includedScopes>compile,runtime</includedScopes>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.jetbrains.teamcity</groupId>
          <artifactId>teamcity-maven-plugin</artifactId>
          <version>1.6.36</version>
          <executions>
            <execution>
              <id>teamcity-assemble-plugin</id>
              <goals>
                <goal>build</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>javac-release-flag-compat</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>
                -XX:+IgnoreUnrecognizedVMOptions
                --add-opens java.base/java.lang=ALL-UNNAMED
                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                --add-opens java.base/java.util=ALL-UNNAMED
                --add-opens java.base/java.io=ALL-UNNAMED
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>